<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">天天</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="menu1">消息</string>
    <string name="menu2">工作</string>
    <string name="menu3">联系人</string>
    <string name="menu4">更多</string>
    <string name="menu5">菜单五</string>
    <string name="menu6">菜单六</string>
    <string name="title_activity_news_home">NewsHomeActivity</string>
    <string name="title_activity_task_home">TaskHomeActivity</string>
    <string name="title_activity_contact_home">ContactHomeActivity</string>
    <string name="title_activity_more_home">MoreHomeActivity</string>
    <string name="news">消息</string>
    <string name="more">更多</string>
    <string name="contact">联系人</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_register_sceond">RegisterSceondActivity</string>
    <string name="title_activity_register_last">RegisterLastActivity</string>
    <string name="title_activity_mine_editname">MineEditnameActivity</string>
    <string name="title_activity_feedback">FeedbackActivity</string>

    <!--lrkString-->
    <string name="collect">收藏</string>
    <string name="experience">钉钉体验站</string>
    <string name="push">推荐给好友</string>
    <string name="service">我的客服</string>
    <string name="res">帮助与反馈</string>
    <string name="phone">本月还可免费拨打</string>
    <string name="Ding">今日还可DING</string>
    <string name="minutes">分钟</string>
    <string name="people">人数</string>
    <string name="setControl">设置</string>
    <string name="account">账号与安全</string>
    <string name="sercurity">已保护</string>
    <string name="new_Information">新消息通知</string>
    <string name="private_Information">隐私</string>
    <string name="public_Function">通用</string>
    <string name="about">关于</string>
    <string name="version_Information">版本信息</string>
    <string name="exit_Login">退出登录</string>
    <string name="title_activity_friend_list">FriendListActivity</string>
    <string name="title_activity_friend_add">FriendAddActivity</string>
    <string name="sended">已发出</string>
    <string name="title_activity_friend_add_list">FriendAddListActivity</string>
    <string name="title_activity_add_home">AddHomeActivity</string>
    <string name="title_activity_add_group">AddGroupActivity</string>
    <string name="title_activity_group_add_friend_list">GroupAddFriendListActivity</string>
    <string name="title_activity_add_org">AddOrgActivity</string>
    <string name="title_activity_expand_adapter">ExpandAdapter</string>
    <string name="title_activity_dept_users_list">DeptUsersListActivity</string>
    <string name="title_activity_friend_detail">FriendDetailActivity</string>
    <string name="title_activity_publicy_list">PublicyListActivity</string>
    <string name="title_activity_publicy_detail">PublicyDetailActivity</string>
    <string name="title_activity_publicy_add">PublicyAddActivity</string>
    <string name="title_activity_publicy_add_next">PublicyAddNextActivity</string>
    <string name="title_activity_publicy_contact_home">PublicyContactHomeActivity</string>
    <string name="title_activity_check_adapter">CheckAdapter</string>
    <string name="title_activity_publicy_users_list">PublicyUsersListActivity</string>
    <string name="title_activity_mine_photo">title_activity_mine_photo</string>
    <string name="title_activity_task_job_home">TaskJobHomeActivity</string>
    <string name="title_activity_job_add">JobAddActivity</string>


    <string name="done_label" msgid="7007948707597430919">"完成"</string>
    <string name="hour_picker_description" msgid="7586639618712934060">"小时转盘"</string>
    <string name="minute_picker_description" msgid="6024811202872705251">"分钟转盘"</string>
    <string name="select_hours" msgid="7651068754188418859">"选择小时"</string>
    <string name="select_minutes" msgid="8327182090226828481">"选择分钟"</string>
    <string name="day_picker_description" msgid="3968620852217927702">"按月份划分的日期网格"</string>
    <string name="year_picker_description" msgid="6963340404644587098">"年份列表"</string>
    <string name="select_day" msgid="3973338219107019769">"选择月份和日期"</string>
    <string name="select_year" msgid="2603330600102539372">"选择年份"</string>
    <string name="item_is_selected" msgid="2674929164900463786">"已选择 <xliff:g id="ITEM">%1$s</xliff:g>"</string>
    <string name="deleted_key" msgid="6908431551612331381">"已删除 <xliff:g id="KEY">%1$s</xliff:g>"</string>

    <string name="time_placeholder" translatable="false">--</string>
    <string name="time_separator" translatable="false">:</string>
    <string name="radial_numbers_typeface" translatable="false">sans-serif</string>
    <string name="sans_serif" translatable="false">sans-serif</string>
    <string name="day_of_week_label_typeface" translatable="false">sans-serif</string>
    <string name="title_activity_job_list">JobListActivity</string>
    <string name="title_activity_job_cy_list">JobCyListActivity</string>
    <string name="title_activity_job_gc_list">JobGcListActivity</string>
    <string name="title_activity_job_sh_list">JobShListActivity</string>
    <string name="title_activity_job_detail">JobDetailActivity</string>
    <string name="title_activity_about_version">AboutVersionActivity</string>
    <string name="title_activity_commit_list">CommitListActivity</string>
    <string name="title_activity_dept_select_friend_list">DeptSelectFriendListActivity</string>
    <string name="title_activity_apply_delay">ApplyDelayActivity</string>
    <string name="title_activity_solve_delay">SolveDelayActivity</string>
    <string name="title_activity_apply_give_up">ApplyGiveUpActivity</string>
    <string name="title_activity_solve_give_up">SolveGiveUpActivity</string>
    <string name="title_activity_my_job_detail">MyJobDetailActivity</string>
    <string name="title_activity_solve_give_up_detail">SolveGiveUpDetail</string>
    <string name="title_activity_orag_detail">OragDetailActivity</string>
    <string name="title_activity_public_read_opotion">PublicReadOpotionActivity</string>
    <string name="title_activity_publicy_read_list">PublicyReadListActivity</string>
    <string name="title_activity_selected">SelectedActivity</string>
    <string name="title_activity_dept_task">DeptTaskActivity</string>
    <string name="title_activity_dept_task_detail">DeptTaskDetailActivity</string>
    <string name="title_activity_forget">ForgetActivity</string>
    <string name="title_activity_job_edit">JobEditActivity</string>
    <string name="title_activity_contant_commit">ContantCommitActivity</string>
    <string name="title_activity_edit_pwd">EditPwdActivity</string>
    <string name="title_activity_fz_sort">FzSortActivity</string>
    <string name="title_activity_over_task_list">OverTaskListActivity</string>
    <string name="title_activity_overed_task_list">OveredTaskListActivity</string>
    <string name="title_activity_dept_file_list">DeptFileListActivity</string>
    <string name="title_activity_fb_sort">FbSortActivity</string>
    <string name="title_activity_friend_detail_task_sort">FriendDetailTaskSortActivity</string>
    <string name="title_activity_fz_all_list">FzAllListActivity</string>
    <string name="title_activity_job_all_list">JobAllListActivity</string>
</resources>
