<?xml version="1.0" encoding="utf-8"?>
<TabHost
    android:id="@android:id/tabhost"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:layout_weight="1.0" />

        <TabWidget
            android:id="@android:id/tabs"
            android:visibility="gone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.0" />

        <View style="@style/new_item_divider" />

        <RadioGroup
            android:id="@+id/main_radio"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_gravity="bottom"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:background="@color/bottom_background">

            <RadioButton
                android:id="@id/menu1"
                android:tag="menu1"
                android:layout_height="match_parent"
                android:text="@string/menu1"
                android:layout_marginTop="0.0dip"
                android:drawableTop="@drawable/menu1_n"
                style="@style/main_tab_bottom2" />

            <RadioButton
                android:id="@id/menu2"
                android:tag="menu2"
                android:layout_height="match_parent"
                android:text="@string/menu2"
                android:layout_marginTop="0.0dip"
                android:drawableTop="@drawable/menu2_n"
                style="@style/main_tab_bottom2"
                />


            <RadioButton
                android:id="@id/menu3"
                android:tag="menu3"
                android:layout_height="match_parent"
                android:text="@string/menu3"
                android:layout_marginTop="0.0dip"
                android:drawableTop="@drawable/menu3_n"
                style="@style/main_tab_bottom2" />

            <RadioButton
                android:id="@id/menu4"
                android:tag="menu3"
                android:layout_height="match_parent"
                android:text="@string/menu4"
                android:layout_marginTop="0.0dip"
                android:drawableTop="@drawable/menu4_n"
                style="@style/main_tab_bottom2" />


        </RadioGroup>
    </LinearLayout>

</TabHost>
