<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_fgx"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/account"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_Height"
            android:layout_marginTop="@dimen/margin_Top_Size"
            android:background="@drawable/shape_li"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_Size"
                android:text="@string/account"
                android:textSize="@dimen/textSize_list" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_Size"
                android:gravity="right">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/icon_device_safe"
                    android:drawablePadding="@dimen/margin_Size"
                    android:drawableRight="@drawable/alm_cmail_right_arrow"
                    android:gravity="center"
                    android:text="@string/sercurity" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/three_Part"
            android:layout_marginTop="@dimen/margin_Top_Size"
            android:background="@color/white1"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/new_Information"
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_Height"
                android:background="@drawable/shape_li"
                android:clickable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/margin_Size"
                    android:text="@string/new_Information"
                    android:textSize="@dimen/textSize_list" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="@dimen/margin_Size"
                    android:gravity="right">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/margin_Size"
                        android:background="@drawable/alm_cmail_right_arrow" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/margin_Top_Size"
                android:background="@color/gray_fgx" />

            <LinearLayout
                android:id="@+id/private_Information"
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_Height"
                android:background="@drawable/shape_li"
                android:clickable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/margin_Size"
                    android:text="@string/private_Information"
                    android:textSize="@dimen/textSize_list" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="@dimen/margin_Size"
                    android:gravity="right">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/margin_Size"
                        android:background="@drawable/alm_cmail_right_arrow" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/margin_Top_Size"
                android:background="@color/gray_fgx" />

            <LinearLayout
                android:id="@+id/public_Function"
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_Height"
                android:background="@drawable/shape_li"
                android:clickable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/margin_Size"
                    android:text="@string/public_Function"
                    android:textSize="@dimen/textSize_list" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="@dimen/margin_Size"
                    android:gravity="right">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/margin_Size"
                        android:background="@drawable/alm_cmail_right_arrow" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/about"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_Height"
            android:layout_marginTop="@dimen/margin_Top_Size"
            android:background="@drawable/shape_li"
            android:clickable="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/margin_Size"
                android:text="@string/about"
                android:textSize="@dimen/textSize_list" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/margin_Size"
                android:gravity="right">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/margin_Size"
                    android:drawableRight="@drawable/alm_cmail_right_arrow"
                    android:gravity="center"
                    android:text="@string/version_Information" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/exit_Login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_Height"
            android:layout_marginTop="@dimen/margin_Top_Size"
            android:background="@drawable/shape_li"
            android:clickable="true"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/exit_Login"
                android:textSize="@dimen/textSize_list" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>