<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_fgx"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/lineUsers"
            android:layout_width="match_parent"
            android:layout_height="@dimen/user_Layout_Height"
            android:layout_marginTop="@dimen/margin_Top_Size"
            android:background="@drawable/shape_li"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_user_picture"
                style="@style/text_nomor_style"
                android:layout_width="@dimen/circle"
                android:layout_height="@dimen/circle"
                android:layout_margin="@dimen/margin_Size"
                android:background="@drawable/circular_portrait"
                android:gravity="center"
                android:text="dhh"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_head"
                style="@style/text_nomor_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_Size"
                android:gravity="center"
                android:text="dhh" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/margin_Size"
                android:gravity="right">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/icon_qrcode" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/margin_Size"
                    android:background="@drawable/alm_cmail_right_arrow" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/double_Part"
            android:layout_marginTop="@dimen/margin_Top_Size"
            android:background="@color/white1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/margin_Large_Top_Size"
                    android:drawableLeft="@drawable/settings_phone"
                    android:drawablePadding="@dimen/drawablePaddingSpace"
                    android:gravity="center_vertical"
                    android:text="@string/phone" />

                <TextView
                    android:id="@+id/tv_minutes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="9999"
                    android:textSize="@dimen/large_Text_Size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/minutes"
                    android:textSize="@dimen/textSize_list" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/margin_Large_Top_Size"
                android:layout_marginTop="@dimen/margin_Large_Top_Size"
                android:background="@color/gray_fgx" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/margin_Large_Top_Size"
                    android:drawableLeft="@drawable/settings_ding"
                    android:drawablePadding="@dimen/drawablePaddingSpace"
                    android:gravity="center_vertical"
                    android:text="@string/phone" />

                <TextView
                    android:id="@+id/tv_people"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="9999"
                    android:textSize="@dimen/large_Text_Size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/people"
                    android:textSize="@dimen/textSize_list" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lineCollect"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_Height"
            android:layout_marginTop="@dimen/margin_Top_Size"
            android:background="@drawable/shape_li"
            android:clickable="true">

            <TextView
                style="@style/text_nomor_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/margin_Size"
                android:text="@string/collect" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/margin_Size"
                android:gravity="right">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/margin_Size"
                    android:background="@drawable/alm_cmail_right_arrow" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lineExperience"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_Height"
            android:layout_marginTop="@dimen/margin_Top_Size"
            android:background="@drawable/shape_li"
            android:clickable="true">

            <TextView
                style="@style/text_nomor_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/margin_Size"
                android:text="@string/experience" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/margin_Size"
                android:gravity="right">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/margin_Size"
                    android:background="@drawable/alm_cmail_right_arrow" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/three_Part"
            android:layout_marginTop="@dimen/margin_Top_Size"
            android:background="@color/white1"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/lineIntroduce"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/shape_li"
                android:clickable="true">

                <TextView
                    style="@style/text_nomor_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/margin_Size"
                    android:text="@string/push" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="@dimen/margin_Size"
                    android:gravity="right">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/margin_Size"
                        android:background="@drawable/alm_cmail_right_arrow" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/margin_Top_Size"
                android:background="@color/gray_fgx" />

            <LinearLayout
                android:id="@+id/lineService"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/shape_li"
                android:clickable="true">

                <TextView
                    style="@style/text_nomor_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/margin_Size"
                    android:text="@string/service" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="@dimen/margin_Size"
                    android:gravity="right">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/margin_Size"
                        android:background="@drawable/alm_cmail_right_arrow" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/margin_Top_Size"
                android:background="@color/gray_fgx" />

            <LinearLayout
                android:id="@+id/lineHelp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/shape_li"
                android:clickable="true">

                <TextView
                    style="@style/text_nomor_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/margin_Size"
                    android:text="@string/res" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="@dimen/margin_Size"
                    android:gravity="right">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/margin_Size"
                        android:background="@drawable/alm_cmail_right_arrow" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lineAdervise"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_Height"
            android:layout_marginBottom="@dimen/margin_Top_Size"
            android:layout_marginTop="@dimen/margin_Top_Size"
            android:background="@drawable/shape_li"
            android:clickable="true">

            <TextView
                style="@style/text_nomor_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/margin_Size"
                android:text="@string/setControl" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/margin_Size"
                android:gravity="right">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/margin_Size"
                    android:background="@drawable/alm_cmail_right_arrow" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>